--- a/assets/stylesheets/_components.scss
+++ b/assets/stylesheets/_components.scss
@@ -373,3 +373,4 @@
 @import 'signup/validation-fieldset/style';
 @import 'support/support-user/style';
 @import 'vip/vip-logs/style';
+@import 'signup/steps/mlb-theme-selection/style';
