Add Cancel button to Menu editor
The only way to revert changes to the menu editor was to navigate away from the
page. This adds a button which will fetch the saved menu from the server. I
used menu-save-button.jsx as a template for the new button.

This uses the Button component instead of DOM <button>.  This way we get any
improvements to that button, plus we get to remove an external dependency
(classNames) at the expense of adding an internal one.

The edit button was wrapping at mobile widths and at 660px to 706px. Mobile is
easy: add a breakpoint. The other one was tougher. The solution was to change
the width of the element to a calc() value that provided space for the button.

This was originally avoided in the pre-oss repo commit 0ef153c because
`text-overflow: ellipsis` did not support `width: calc()`. Browsers appear to
have improved since then. Our new solution is to expand the edit box to the
full width while it is open to make it easier to edit longer menu titles on
narrower viewports.

--- a/client/my-sites/menus/style.scss
+++ b/client/my-sites/menus/style.scss
@@ -194,7 +194,7 @@
 		span {
 			display: block;
 			float: left;
-			max-width: 90%; /* should be less to avoid a bug on touch + <a> tag that auto-closes the area, but ellipsis wouldn't work */
+			max-width: calc( 100% - 20px );
 			text-overflow: ellipsis;
 			overflow: hidden;
 			white-space: nowrap;
@@ -218,6 +218,9 @@
 		font-weight: inherit;
 		width: calc(100% - 40px);
 		margin-right: 40px;
+		@include breakpoint( "<480px" ) {
+			width: 100%;
+		}
 	}
 }
 
@@ -238,6 +241,18 @@
 	}
 }
 
+
+.is-editing-title {
+	@include breakpoint( "<480px" ) {
+		.menus__menu-name {
+			line-height: 41px;
+		}
+
+		.menus__menu-actions {
+			display: none;
+		}
+	}
+}
 
 /**
  * Menu: List
