--- a/assets/stylesheets/_components.scss
+++ b/assets/stylesheets/_components.scss
@@ -276,6 +276,7 @@
 @import 'my-sites/stats/stats-overview-placeholder/style';
 @import 'my-sites/stats/stats-site-overview/style';
 @import 'my-sites/stats/stats-tabs/style';
+@import 'my-sites/theme/theme-download-card/style';
 @import 'my-sites/themes/current-theme/style';
 @import 'my-sites/themes/style';
 @import 'my-sites/themes/themes-search-card/style';
