--- a/assets/stylesheets/_components.scss
+++ b/assets/stylesheets/_components.scss
@@ -310,6 +310,7 @@
 @import 'post-editor/editor-location/style';
 @import 'post-editor/editor-mobile-navigation/style';
 @import 'post-editor/editor-more-options/style';
+@import 'post-editor/editor-notice/style';
 @import 'post-editor/editor-page-parent/style';
 @import 'post-editor/editor-page-order/style';
 @import 'post-editor/editor-permalink/style';
