--- a/assets/stylesheets/_components.scss
+++ b/assets/stylesheets/_components.scss
@@ -341,6 +341,7 @@
 @import 'reader/sidebar/style';
 @import 'reader/site-and-author-icon/style';
 @import 'reader/site-stream/style';
+@import 'reader/reader-start/style';
 @import 'reader/style';
 @import 'reader/stream-header/style';
 @import 'reader/update-notice/style';
