--- a/client/reader/comments/style.scss
+++ b/client/reader/comments/style.scss
@@ -45,7 +45,7 @@
 			resize: vertical;
 			font-size: 14px;
 			font-family: $serif;
-			line-height: 21px;			
+			line-height: 21px;
 
 			white-space: pre-wrap;
 			word-wrap: break-word;
@@ -153,7 +153,11 @@
 		}
 	}
 
-	&.is-parent {}
+	&.depth-2 {
+		.comments__view-replies-btn {
+			margin-left: -40px;
+		}
+	}
 
 	&.is-child {
 		background: transparent;
