Sites: Allow dropdown to overlap surrounding elements
Site selector dropdown was not properly overlaying in
devdocs.

Add open sites-dropdown to the stacking context and give
a z-index that matches other dropdowns.

--- a/assets/stylesheets/shared/functions/_z-index.scss
+++ b/assets/stylesheets/shared/functions/_z-index.scss
@@ -92,6 +92,7 @@ $z-layers: (
 		'.search.is-pinned': 170,
 		'.select-dropdown.is-open .select-dropdown__container': 170,
 		'.accessible-focus .select-dropdown.is-open .select-dropdown__container': 170,
+		'.sites-dropdown.is-open .sites-dropdown__wrapper' : 170,
 		'.popover.editor-visibility__popover': 179,
 		'.feature-example__gradient': 179,
 		'.global-notices': 179,
