GuidedTours: Rename GuidesTours to GuidedTours in code
 - GuidesTours -> GuidedTours
 - guidestours -> guided-tours
 - Don't namespace components in steps
 - Small README.md update

--- a/assets/stylesheets/shared/functions/_z-index.scss
+++ b/assets/stylesheets/shared/functions/_z-index.scss
@@ -132,8 +132,8 @@ $z-layers: (
 		'popover.is-dialog-visible': 100300,
 		'body .webui-popover': 100300,
 		'.fullscreen-fader': 200000,
-		'.guidestours__overlay': 200050,
-		'.guidestours__step': 201000,
+		'.guided-tours__overlay': 200050,
+		'.guided-tours__step': 201000,
 		'#habla_window_div.habla_window_div_base': 99999999 //olark
 	),
 	'.plan-compare-card__ribbon': (
