Plans: Add PremiumPopover component and use it

--- a/assets/stylesheets/_components.scss
+++ b/assets/stylesheets/_components.scss
@@ -75,6 +75,7 @@
 @import 'components/plans/plan-list/style';
 @import 'components/plans/plan-price/style';
 @import 'components/plans/plans-compare/style';
+@import 'components/plans/premium-popover/style';
 @import 'components/popover/style';
 @import 'components/post-excerpt/style';
 @import 'components/post-schedule/style';
