--- a/client/components/domains/example-domain-suggestions/style.scss
+++ b/client/components/domains/example-domain-suggestions/style.scss
@@ -17,6 +17,10 @@
 		display: none;
 	}
 }
+.example-domain-suggestions__premium-price {
+	font-size: 11pt;
+	cursor: pointer;
+}
 
 .example-domain-suggestions__information {
 	background-color: $white;
