Sidebar: create "button" sub-component to render secondary action.
Clean up classes.

--- a/client/layout/sidebar/style.scss
+++ b/client/layout/sidebar/style.scss
@@ -143,26 +143,6 @@
 		}
 	}
 
-	a.add-new {
-		padding: 2px 8px 3px 8px;
-		height: 24px;
-		margin: 11px 8px 0 0;
-		line-height: 18px;
-		background-color: $gray-light;
-		color: darken( $gray, 20% );
-		font-size: 11px;
-		font-weight: 600;
-		border-radius: 3px;
-		border: 1px solid lighten( $gray, 20% );
-
-		@include breakpoint( "<660px" ) {
-			font-size: 14px;
-			height: 35px;
-			padding: 8px 16px;
-			margin: 10px 10px 0 0;
-		}
-	}
-
 	a.plan-name {
 		padding: 3px 8px 4px 8px;
 		position: absolute;
@@ -222,6 +202,31 @@
 	}
 }
 
+a.sidebar__button {
+	display: flex;
+	position: relative;
+	box-sizing: border-box;
+	white-space: nowrap;
+	overflow: hidden;
+	padding: 2px 8px 3px 8px;
+	height: 24px;
+	margin: 11px 8px 0 0;
+	line-height: 18px;
+	background-color: $gray-light;
+	color: darken( $gray, 20% );
+	font-size: 11px;
+	font-weight: 600;
+	border-radius: 3px;
+	border: 1px solid lighten( $gray, 20% );
+
+	@include breakpoint( "<660px" ) {
+		font-size: 14px;
+		height: 35px;
+		padding: 8px 16px;
+		margin: 10px 10px 0 0;
+	}
+}
+
 
 // Selected Menu
 @include breakpoint( ">660px" ) {
@@ -239,7 +244,7 @@
 			}
 		}
 
-		a.add-new {
+		.sidebar__button {
 			color: darken( $gray, 30% );
 			border: 1px solid darken( $gray, 10% );
 		}
@@ -275,7 +280,7 @@
 					rgba( $gray-light, 1 ) 50% );
 			}
 
-			&.add-new {
+			&.sidebar__button {
 				background-color: $white;
 				color: $gray-dark;
 			}
@@ -299,7 +304,7 @@
 					rgba( $gray-light, 1 ) 50% );
 			}
 
-			&.add-new {
+			&.sidebar__button {
 				background-color: $white;
 				color: $gray-dark;
 			}
@@ -312,7 +317,7 @@
 }
 
 .notouch .sidebar__menu li:not(.selected) a {
-	&.add-new:hover {
+	&.sidebar__button:hover {
 		color: $blue-medium;
 	}
 }
