Jetpack-connect: Redirect back to old auth screen when the connection has been started in wp-admin

--- a/assets/stylesheets/shared/functions/_z-index.scss
+++ b/assets/stylesheets/shared/functions/_z-index.scss
@@ -131,6 +131,7 @@ $z-layers: (
 		'.category-selector__add-category-info': 100201,
 		'popover.is-dialog-visible': 100300,
 		'body .webui-popover': 100300,
+		'.jetpack-connect__redirect': 200000,
 		'.fullscreen-fader': 200000,
 		'.guided-tours__overlay': 200050,
 		'.guided-tours__step': 201000,
