--- a/client/signup/jetpack-connect/style.scss
+++ b/client/signup/jetpack-connect/style.scss
@@ -102,20 +102,29 @@
 	}
 }
 
-.jetpack-connect__install {
-
-}
-
 .jetpack-connect__install-steps {
 	display: flex;
 	justify-content: center;
+	flex-direction: column;
+	flex-wrap: wrap;
+
+	@include breakpoint( ">660px" ) {
+		flex-direction: row;
+	}
 }
 
 .jetpack-connect__install-step {
-	display: inline-block;
-	margin: 8px;
-	height: 304px;
-	width: 360px;
+	display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+		align-items: center;
+	margin: 0;
+	max-width: 360px;
+	min-width: 320px;
+
+	@include breakpoint( ">660px" ) {
+		margin: 8px;
+	}
 }
 
 .jetpack-connect__install-step-title {
@@ -128,11 +137,5 @@
 	font-size: 12px;
 	margin: 8px 0;
 	text-align: left;
-}
-
-.jetpack-connect__example {
-	bottom: 16px;
-	height: 164px;
-	position: absolute;
-	width: 312px;
+	flex-grow: 2;
 }
