--- a/client/layout/sidebar/style.scss
+++ b/client/layout/sidebar/style.scss
@@ -26,6 +26,7 @@
 		pointer-events: none;
 		transform: translateX( 0 );
 		transition: all 0.15s cubic-bezier(0.770, 0.000, 0.175, 1.000);
+		z-index: z-index( 'root', '.sidebar' );
 
 		.focus-sidebar & {
 			pointer-events: auto;
