Jetpack Connect: Back button

--- a/client/signup/jetpack-connect/style.scss
+++ b/client/signup/jetpack-connect/style.scss
@@ -215,3 +215,8 @@
 		margin-top: 8px;
 	}
 }
+
+.jetpack-connect__back-button {
+	position: absolute;
+	transform: translateX(-96px) translateY(4px);
+}
