Introduce ABtest switching menu

--- a/assets/stylesheets/_components.scss
+++ b/assets/stylesheets/_components.scss
@@ -125,6 +125,7 @@
 @import 'layout/sidebar/style';
 @import 'lib/accept/style';
 @import 'lib/keyboard-shortcuts/style';
+@import 'lib/abtest/test-helper/style';
 @import 'mailing-lists/style';
 @import 'me/account-password/style';
 @import 'me/account/style';
