When AFK posts have a featured image, make sure the image and excerpt are not displayed in the post stream

--- a/client/reader/following-stream/_style.scss
+++ b/client/reader/following-stream/_style.scss
@@ -178,7 +178,9 @@
 		.reader__full-post-content,
 		.reader-post-byline__tag,
 		.reader-post-byline__date,
+		.reader__post-featured-image,
 		.reader__post-footer,
+		.post-excerpt,
 		.site__info {
 			display: none;
 		}
