Component: Introduce SpinnerLine component

--- a/assets/stylesheets/_components.scss
+++ b/assets/stylesheets/_components.scss
@@ -98,6 +98,7 @@
 @import 'components/sites-popover/style';
 @import 'components/social-logo/style';
 @import 'components/spinner/style';
+@import 'components/spinner-line/style';
 @import 'components/stat-update-indicator/style';
 @import 'components/sticky-panel/style';
 @import 'components/theme/style';
