Implement new UI

--- a/client/my-sites/plugins/plan-setup/style.scss
+++ b/client/my-sites/plugins/plan-setup/style.scss
@@ -4,69 +4,32 @@ $polldaddy-red:  #D45458;
 
 .plan-setup {
 	margin: 0 auto;
-	max-width: 500px;
+	max-width: 700px;
 }
 
 .plan-setup__header {
 	@extend %heading;
-	margin-bottom: 2em;
+	margin-bottom: .75em;
+	text-align: center;
+	color: $gray-dark;
+}
+
+.plan-setup__description {
+	margin-bottom: 3em;
+	color: darken( $gray, 20% );
 	text-align: center;
 }
 
-.plan-setup__plugin-header {
-	margin-bottom: 0;
-
-	&.vaultpress {
-		color: white;
-		background-color: $vaultpress-red;
-	}
-	&.akismet {
-		color: white;
-		background-color: $akismet-green;
-	}
-	&.polldaddy {
-		color: white;
-		background-color: $polldaddy-red;
-	}
-}
-
-.plan-setup__status {
-	display: flex;
-	flex-wrap: wrap;
-
-	.plan-setup__status-name {
-		flex: 1;
-	}
-
-	.gridicon,
-	.spinner {
-		flex: 0 0 24px;
-	}
-
-	.plan-setup__error,
-	.plan-setup__message {
-		flex: 1 0 100%;
-		margin-top: 8px;
-	}
-
-	.gridicons-checkmark-circle {
-		color: $alert-green;
-	}
-
-	.plan-setup__error,
-	.gridicons-notice {
-		color: $alert-red;
-	}
-}
-
-.plan-setup__action {
-	background-color: lighten($gray, 35%);
-
-	.plan-setup__action-content {
-		line-height: 40px;
-	}
-
+.plan-setup__need-manage {
 	.button {
 		float: right;
 	}
+
+	.button + .button {
+		margin-right: 16px;
+	}
+}
+
+.plan-setup .plugin-item.card .notice.is-info .notice__icon {
+	display: block;
 }
