--- a/client/my-sites/posts/style.scss
+++ b/client/my-sites/posts/style.scss
@@ -452,3 +452,8 @@
 .posts__list .upgrade-nudge.card {
 	margin: 24px 0;
 }
+
+.posts .section-nav .gravatar {
+	margin-left: 6px;
+	vertical-align: middle;
+}
