--- a/client/reader/feed-header/style.scss
+++ b/client/reader/feed-header/style.scss
@@ -21,30 +21,38 @@
 	}
 
 	.follow-button {
+		margin-right: 15px;
+
 		.follow-button__label {
-			color: $gray;
+			color: $gray-dark;
 		}
 
 		.gridicon {
-			top: 5px;
-			left: 14px;
+			fill: $gray-dark;
+			top: 9px;
+			left: 15px;
 		}
 
 		&:hover {
 			background: none;
 
 			.gridicon {
-				fill: $blue-medium;
+				fill: $gray-dark;
 			}
 
 			.follow-button__label {
 				cursor: pointer;
-				color: $blue-medium;
+				color: $gray-dark;
 			}
 		}
 	}
 
 	.follow-button.is-following {
+
+		.gridicon {
+			fill: $alert-green;
+		}
+
 		.follow-button__label {
 			color: $alert-green;
 		}
@@ -131,7 +139,7 @@
 
 		@include breakpoint( ">480px" ) {
 			position: absolute;
-				top: 20px;
+				top: 17px;
 				right: 0;
 		}
 	}
