Upgrades: show premium features in business plan "my plan" page

--- a/client/my-sites/plans/current-plan/style.scss
+++ b/client/my-sites/plans/current-plan/style.scss
@@ -65,3 +65,9 @@
 	font-size: 18px;
 	font-weight: 300;
 }
+
+.current-plan__more-features-header {
+	color: #4f748e;
+	font-size: 23px;
+	padding: 32px;
+}
