--- a/client/reader/comments/style.scss
+++ b/client/reader/comments/style.scss
@@ -2,16 +2,15 @@
 .comments {
 	clear: both;
 	margin-top: 32px;
-	border-top: 1px solid lighten( $gray, 30% );
+	border-top: 1px solid lighten( $gray, 20% );
 }
 
 
 // Comment Counter
 .comments__count {
-	margin: 0 0 24px;
 	text-align: center;
 	color: $gray;
-	display: none;
+	float: right;
 }
 
 // Add a New Comment Form
@@ -19,7 +18,6 @@
 	position: relative;
 	padding: 0 0 0 48px;
 	margin-top: 24px;
-	margin-bottom: -12px;
 
 	.gravatar {
 		position: absolute;
@@ -28,29 +26,55 @@
 		border-radius: 48px;
 	}
 
-	input, textarea {
+	input {
 		font-size: 14px;
 		padding: 5px 10px;
 	}
 
-	textarea {
-		max-height: 400px;
-		min-height: 33px;
-		height: 33px;
-		padding-right: 60px;
-		resize: vertical;
-		font-family: $serif;
+	// The inner working of these styles is covered here: http://alistapart.com/article/expanding-text-areas-made-elegant
+	.expanding-area {
+		position: relative;
+		$initial-focused-height: 70px;
 
-		&:focus {
-			min-height: 70px;
+		pre,
+		textarea {
+			max-height: 400px;
+			min-height: 33px;
+			margin: 0;
+			padding: 5px 60px 5px 5px;
+			resize: vertical;
+			font-size: 14px;
+			font-family: $serif;
+			line-height: 21px;
+
+			white-space: pre-wrap;
+			word-wrap: break-word;
+		}
+
+		textarea {
+			position: absolute;
+				top: 0;
+				left: 0;
+			height: 100%;
+		}
+
+		pre {
+			border: 1px solid $gray;
+			box-sizing: border-box;
+			display: block;
+			visibility: hidden;
+		}
+
+		&.focused {
+			min-height: $initial-focused-height;
 		}
 	}
 
 	button {
 		opacity: 0;
 		position: absolute;
-		top: 4px;
-		right: 16px;
+		  top: 4px;
+		  right: 16px;
 		padding: 4px;
 		font-size: 12px;
 		font-weight: 600;
@@ -129,7 +153,11 @@
 		}
 	}
 
-	&.is-parent {}
+	&.depth-2 {
+		.comments__view-replies-btn {
+			margin-left: -40px;
+		}
+	}
 
 	&.is-child {
 		background: transparent;
@@ -154,6 +182,30 @@
 			left: -41px;
 		border-radius: 48px;
 	}
+}
+
+.comment__trackbackicon {
+	position: absolute;
+		top: 1px;
+		left: 8px;
+	border-radius: 50%;
+	background-color: $gray-light;
+	width: 32px;
+	height: 32px;
+
+	.gridicon {
+		height: 24px;
+	  	fill: lighten( $gray, 10% );
+	  	position: absolute;
+	  		top: 50%;
+	  		margin-top: -12px;
+	  		left: 50%;
+	  		margin-left: -12px;
+	}
+}
+
+.comment__username {
+	font-size: 16px;
 
 	.gridicon {
 		height: 16px;
@@ -166,10 +218,6 @@
 	&:hover .gridicon {
 		fill: $link-highlight;
 	}
-}
-
-.comment__username {
-	font-size: 16px;
 }
 
 .comment__timestamp a {
@@ -253,6 +301,12 @@
 		&:hover {
 			color: $blue-medium;
 		}
+
+		&.comment__actions-cancel-reply {
+			float: right;
+			margin-top: 4px;
+			margin-right: 0;
+		}
 	}
 
 	@include breakpoint( "<480px" ) {
@@ -262,6 +316,36 @@
 	}
 }
 
-.comment__actions-like-count {
-	display: none;
+.comments__top-bar {
+	margin: 24px 48px 24px 0;
+	overflow: auto;
+
+	&.is-no-comments {
+	  display: none;
+	}
+}
+
+.comments__view-earlier {
+	color: $gray;
+	cursor: pointer;
+	display: inline-block;
+	font-size: 14px;
+	margin-bottom: 10px;
+}
+
+.comments__view-replies-btn {
+	cursor: pointer;
+	background-color: $gray-light;
+	width: 100%;
+	color: darken( $gray, 10% );
+	text-align: left;
+	margin-top: 15px;
+	padding: 5px 10px 10px 12px;
+
+	.gridicon {
+		position: relative;
+			top: 4px;
+		margin-right: 4px;
+		transform: rotate( 180deg );
+	}
 }
