--- a/client/reader/post-options/_style.scss
+++ b/client/reader/post-options/_style.scss
@@ -54,7 +54,24 @@
 	}
 }
 
+.popover__menu {
+
+	.gridicon {
+		height: 24px;
+		width: 24px;
+		position: absolute;
+			left: 12px;
+			top: 9px;
+
+		&.gridicon__edit {
+			left: 12px;
+			top: 5px;
+		}
+	}
+}
+
 .popover__menu .follow-button {
+
 	&:hover,
 	&:focus {
 		background-color: $blue-medium;
