Upgrades: Change hardcoded color to color variable

--- a/client/my-sites/plans/current-plan/style.scss
+++ b/client/my-sites/plans/current-plan/style.scss
@@ -67,7 +67,7 @@
 }
 
 .current-plan__more-features-header {
-	color: #4f748e;
+	color: darken( $gray, 20% );
 	font-size: 23px;
 	padding: 32px;
 }
