--- a/client/reader/feed-header/style.scss
+++ b/client/reader/feed-header/style.scss
@@ -21,7 +21,11 @@
 	}
 
 	.follow-button {
-		margin-right: 15px;
+		margin-right: 5px;
+
+		@include breakpoint( ">480px" ) {
+			margin-right: 15px;
+		}
 
 		.follow-button__label {
 			color: $gray-dark;
@@ -112,9 +116,9 @@
 
 .feed-header__image {
 	position: absolute;
-	top: 0;
-	bottom: 0;
-	left: 0;
+		bottom: 0;
+		left: 0;
+		top: 0;
 	width: 48px;
 	overflow: hidden;
 
@@ -134,7 +138,7 @@
 .feed-header__follow {
 	.follow-button {
 		position: absolute;
-			top: 12px;
+			top: 9px;
 			right: 8px;
 
 		@include breakpoint( ">480px" ) {
@@ -146,7 +150,7 @@
 }
 
 .feed-header__details {
-	margin: 24px 0 46px 0;
+	margin: 24px 0 46px;
 	text-align: center;
 	border-bottom: 1px solid lighten( $gray, 20% );
 }
@@ -154,7 +158,7 @@
 .feed-header__description {
 	margin-bottom: 2px;
 	padding: 0 24px;
-	color: darken( $gray, 30 );
+	color: darken( $gray, 30% );
 	font-size: 18px;
 	font-family: $serif;
 
