Update button styles for list items

--- a/client/reader/following-edit/style.scss
+++ b/client/reader/following-edit/style.scss
@@ -32,7 +32,7 @@
 
 	.reader-list-item__title,
 	.reader-list-item__description {
-		margin-right: 0;
+		margin-right: 20px;
 	}
 
 	.external-link .gridicons-external {
