--- a/client/components/forms/form-label/style.scss
+++ b/client/components/forms/form-label/style.scss
@@ -5,7 +5,7 @@
 	margin-bottom: 5px;
 }
 
-.form-label input[type="checkbox"] + span,
+.form-label .checkbox + span,
 .form-label input[type="radio"] + span {
 	font-weight: normal;
 }
