--- a/client/my-sites/plans/jetpack-plan-details/style.scss
+++ b/client/my-sites/plans/jetpack-plan-details/style.scss
@@ -1,8 +1,14 @@
-.jetpack_premium .plan__plan-details ul, .jetpack_business .plan__plan-details ul {
+.jetpack_premium .plan__plan-details ul,
+.jetpack_business .plan__plan-details ul,
+.jetpack_premium_monthly .plan__plan-details ul,
+.jetpack_business_monthly .plan__plan-details ul {
 	margin: 10px 0 10px 10px;
 }
 
-.jetpack_premium .plan__plan-details li, .jetpack_business .plan__plan-details li {
+.jetpack_premium .plan__plan-details li,
+.jetpack_business .plan__plan-details li,
+.jetpack_premium_monthly .plan__plan-details li,
+.jetpack_business_monthly .plan__plan-details li {
 	opacity: 1.0;
 
 	&:before {
