Properly align logged out links below the signup form
Links below the signup form were not properly aligned, because of conflicting CSS with Jetpack Connect.

Fixed Jetpack Connect CSS to have proper scope.

Improved padding of the links for wider resolutions, because the links were still misaligned by few pixels.

--- a/client/components/logged-out-form/style.scss
+++ b/client/components/logged-out-form/style.scss
@@ -30,12 +30,9 @@
 	font-family: $sans;
 	font-size: 14px;
 	line-height: 21px;
-	padding: 16px 0 16px 16px;
+	padding: 16px 0 16px 0;
 	cursor: pointer;
-
-	@include breakpoint( ">480px" ) {
-		padding-left: 24px;
-	}
+	text-align: center;
 
 	&:last-child {
 		border-bottom: none;
