Framework: Introduce utility to check if we are in development env

--- a/server/pages/index.jade
+++ b/server/pages/index.jade
@@ -50,7 +50,7 @@ html(lang=lang, dir=isRTL ? 'rtl' : 'ltr', class=isFluidWidth ? 'is-fluid-width'
 		if isRTL
 			link(rel='stylesheet', href=urls['style-rtl.css'])
 		else
-			if 'development' === env || isDebug
+			if isDevelopment || isDebug
 				link(rel='stylesheet', href=urls['style-debug.css'])
 			else
 				link(rel='stylesheet', href=urls['style.css'])
@@ -73,7 +73,7 @@ html(lang=lang, dir=isRTL ? 'rtl' : 'ltr', class=isFluidWidth ? 'is-fluid-width'
 				if abTestHelper
 					div(class=['environment', 'is-tests'])
 
-		if 'development' !== env
+		if ! isDevelopment
 			script( src=catchJsErrors )
 
 		script.
@@ -120,7 +120,7 @@ html(lang=lang, dir=isRTL ? 'rtl' : 'ltr', class=isFluidWidth ? 'is-fluid-width'
 			script(type='text/javascript')!='var initialReduxState = ' + sanitize.jsonStringifyForHtml( initialReduxState )
 		if i18nLocaleScript
 			script(src=i18nLocaleScript)
-		if 'development' === env || isDebug
+		if isDevelopment || isDebug
 			script(src=urls[ 'vendor' ])
 			script(src=urls[ jsFile + '-' + env ])
 			if chunk
