update config to match new format. Also: prevent a new issue from popping up on post trends arrows

--- a/client/my-sites/stats/post-trends/style.scss
+++ b/client/my-sites/stats/post-trends/style.scss
@@ -81,6 +81,7 @@
 	text-align: right;
 }
 
+/*rtl:begin:ignore*/
 .post-trends__scroll-left {
 	left: 0px;
 }
@@ -88,6 +89,7 @@
 .post-trends__scroll-right {
 	right: 0px;
 }
+/*rtl:end:ignore*/
 
 .post-trends__month {
 	font-size: 0;
