Plans: add domains tip component

--- a/assets/stylesheets/_components.scss
+++ b/assets/stylesheets/_components.scss
@@ -189,6 +189,7 @@
 @import 'my-sites/category-selector/style';
 @import 'my-sites/current-site/style';
 @import 'my-sites/customize/style';
+@import 'my-sites/domain-tip/style';
 @import 'my-sites/draft/style';
 @import 'my-sites/drafts/style';
 @import 'my-sites/exporter/style';
