--- a/client/signup/jetpack-connect/style.scss
+++ b/client/signup/jetpack-connect/style.scss
@@ -218,6 +218,23 @@
 
 .jetpack-connect__tos_link {
 	font-size: 11px;
-   	margin: 8px 0 0px 0;
+   	margin: 4px 0 8px 0;
     text-align: center;
+}
+
+.jetpack-connect__connect_button_card {
+	background: lighten( $gray, 34% );
+	border-top: 1px solid lighten( $gray, 30% );
+	box-shadow: none;
+	margin: 0 -16px -16px -16px;
+	padding: 16px;
+
+	@include breakpoint( ">480px" ) {
+		margin: 16px -24px -24px -24px;
+		padding: 8px 24px 24px;
+	}
+
+	.button.is-primary {
+		margin: 0;
+	}
 }
