Signup: Footer links should be aligned left
Links below the signup forms should be aligned left with the form, not centered.

Brought them in line with the login form footer links.

--- a/client/components/logged-out-form/style.scss
+++ b/client/components/logged-out-form/style.scss
@@ -30,9 +30,8 @@
 	font-family: $sans;
 	font-size: 14px;
 	line-height: 21px;
-	padding: 16px 0 16px 0;
+	padding: 16px 24px;
 	cursor: pointer;
-	text-align: center;
 
 	&:last-child {
 		border-bottom: none;
