Populate Start cards with real data
- adapt to changes in the /read/recommendations/start API response
- add site description to card
- open post previews in full post view when clicking title
- rejig to fetch recommendation IDs only in the parent component, then fetch recommendation in the card, and site/post in subcomponents as needed
- convert card components to stateless functional components
- enable longer excerpts

--- a/client/reader/start/style.scss
+++ b/client/reader/start/style.scss
@@ -192,6 +192,10 @@
 		font-family: 'Merriweather', serif;
 		font-size: 16px;
 		font-weight: 600;
+
+		a, a:visited {
+			color: inherit;
+		}
 	}
 
 	p {
@@ -219,6 +223,11 @@
 		.reader-start-post-preview__author {
 			margin-left: 4px;
 		}
+	}
+
+	.post-excerpt {
+		max-height: 88px;
+		display: block;
 	}
 }
 
