--- a/client/my-sites/themes/style.scss
+++ b/client/my-sites/themes/style.scss
@@ -146,22 +146,16 @@
 	top: 90px;
 	width: 49%;
 	box-shadow: 0px 2px 8px 0px rgba(46,68,83,0.45);
-}
-
-.themes__sheet-screenshot:before {
-	content: "";
-	display: block;
-	// 4:3 screenshot ratio
-	padding-top: 75%;
 	background-color: transparentize( white, 0.5 );
+
+	// with width: 49%, gives 4:3 ratio before the image loads
+	// also x-browser issues, so it's smaller than 4:3 proper
+	min-height: 36.15vw; // 36.75vw would be correct, but Safari is slightly off
 }
 
 .themes__sheet-img {
-	position: absolute;
-		top: 0;
-		left: 0;
+	display: block;
 	width: 100%;
-	height: 100%;
 }
 
 .themes__sheet-content {
