--- a/client/my-sites/themes/style.scss
+++ b/client/my-sites/themes/style.scss
@@ -102,6 +102,10 @@
 .themes__sheet-columns {
 	display: flex;
 	flex-direction: row;
+
+	@include breakpoint( "<660px" ) {
+		flex-direction: column-reverse;
+	}
 }
 
 .themes__sheet-column-left {
@@ -109,16 +113,29 @@
 	width: 50%;
 	flex-direction: column;
 
+	@include breakpoint( "<660px" ) {
+		width: 100%;
+	}
 }
 
 .themes__sheet-column-right {
 	display: flex;
 	width: 50%;
 	flex-direction: column;
+
+	@include breakpoint( "<660px" ) {
+		width: 100%;
+	}
 }
 
 .themes__sheet-action-bar {
 	height: 50px;
+
+	@include breakpoint( "<660px" ) {
+		&.card {
+			margin: 0 0 1px 0;
+		}
+	}
 }
 
 .themes__sheet-primary-button {
@@ -126,6 +143,13 @@
 		top: 5px;
 		right: 50%;
 	margin-right: 20px;
+
+	@include breakpoint( "<660px" ) {
+		margin-right: 0;
+		position: absolute;
+			top: 5px;
+			right: 5px;
+	}
 }
 
 .themes__sheet-button-placeholder {
@@ -151,6 +175,17 @@
 	// with width: 49%, gives 4:3 ratio before the image loads
 	// also x-browser issues, so it's smaller than 4:3 proper
 	min-height: 36.15vw; // 36.75vw would be correct, but Safari is slightly off
+
+	@include breakpoint( "<660px" ) {
+		position: relative;
+		top: 0;
+		width: 100%;
+		box-shadow: none;
+
+		&:before {
+			background: linear-gradient( to bottom, transparentize( white, 0.5 ), transparent );
+		}
+	}
 }
 
 .themes__sheet-img {
@@ -243,44 +278,5 @@
 		display: block;
 		margin: -12px auto 0;
 		background: $gray-light;
-	}
-}
-
-@include breakpoint( "<660px" ) {
-	.themes__sheet-columns {
-		flex-direction: column-reverse;
-	}
-
-	.themes__sheet-column-left {
-		width: 100%;
-	}
-
-	.themes__sheet-column-right {
-		width: 100%;
-	}
-
-	.themes__sheet-screenshot {
-		position: relative;
-		top: 0;
-		width: 100%;
-	}
-
-	.themes__sheet-action-bar.card {
-		margin: 0 0 1px 0;
-	}
-
-	.themes__sheet-screenshot {
-		box-shadow: none;
-	}
-
-	.themes__sheet-screenshot:before {
-		background: linear-gradient( to bottom, transparentize( white, 0.5 ), transparent );
-	}
-
-	.themes__sheet-primary-button {
-		margin-right: 0;
-		position: absolute;
-			top: 5px;
-			right: 5px;
 	}
 }
