Fix signup flow and email display.
- Disable temporary logic for testing the screens manually.

- Use SignupProgressStore instead of SignupDependencyStore to get the
email.

- Remove previously added email signup dependencies.

- Make login happen on click instead of automatically.

--- a/client/signup/processing-screen/style.scss
+++ b/client/signup/processing-screen/style.scss
@@ -38,7 +38,7 @@
 	@include breakpoint( ">660px" ) {
 		left: 0;
 	}
-	
+
 	@include breakpoint( "<660px" ) {
 		transform: scale(0.8);
 		left: 130px;
@@ -298,7 +298,11 @@
 	display: block;
 	padding: 10px 24px;
 	margin: 24px auto 48px auto;
+}
+
+.email-confirmation__button:disabled {
 	animation: pulse 1s infinite linear;
+
 }
 
 
