purchase-detail: split in small components

--- a/client/my-sites/upgrades/checkout-thank-you/style.scss
+++ b/client/my-sites/upgrades/checkout-thank-you/style.scss
@@ -220,3 +220,11 @@
 		max-width: 634px;
 	}
 }
+
+// Google Vouche section
+.purchase-detail__google-voucher-advice {
+	margin-top: 12px;
+	border-top: solid 1px #E9EFF3;
+	padding-top: 12px;
+	display: flex;
+}
