--- a/client/reader/full-post/_style.scss
+++ b/client/reader/full-post/_style.scss
@@ -424,6 +424,46 @@
 	}
 }
 
+// Daily Post-Specific Full Post View Styles
+.reader__full-post.blog-489937 .reader__full-post-content {
+
+	blockquote.left,
+	blockquote.alignleft,
+	blockquote.align-left,
+	blockquote.left-align {
+		margin: 0;
+		padding: 0;
+		border: none;
+		background: none;
+		font-size: 13px;
+		width: 175px;
+
+		@media ( min-width: 1132px ) {
+			position: absolute;
+			left: -( 175px + 32px );
+			margin-left: 0;
+		}
+
+		@media ( max-width: 1132px ) {
+			background: lighten( $gray, 30 );
+			margin: 0 0 24px 0;
+			padding: 16px;
+			width: calc( 100% - 32px );
+		}
+
+		@include breakpoint( "<480px" ) {
+			margin: 0 0 24px 0;
+			background: lighten( $gray, 30 );
+			padding: 16px;
+
+			img {
+				display: block;
+				margin-bottom: 8px;
+			}
+		}
+	}
+}
+
 .detail-page__backdrop {
 	padding: 1px; // this fixes a strange rendering bug at the bottom of the full post card in safari and chrome -shaun
 	z-index: z-index( 'root', '.detail-page__backdrop' ); // above the masterbar
