--- a/client/devdocs/style.scss
+++ b/client/devdocs/style.scss
@@ -158,6 +158,10 @@
 	cursor: pointer;
 }
 
+.design-assets__group .card .docs-example-stats {
+	margin-bottom: 10px;
+}
+
 // ==========================================================================
 // Button component styles
 // ==========================================================================
