--- a/client/components/docs-example/style.scss
+++ b/client/components/docs-example/style.scss
@@ -10,23 +10,16 @@
 
 .docs-example__title,
 .docs-example__toggle {
-	margin: 0 !important;
+	margin-top: 0 !important;
+	margin-bottom: 0 !important;
+}
+
+.docs-example__toggle {
+	margin-left: 10px;
 }
 
 .docs-example__header + .docs-example__main {
 	margin-top: 16px;
-}
-
-.docs-example__footer {
-	margin: 10px 0 0;
-
-	@include breakpoint( ">480px" ) {
-		margin-top: 16px;
-	}
-}
-
-.docs-example__stats {
-	flex-basis: 100%;
 }
 
 /**
@@ -36,14 +29,16 @@
  */
 
 .docs-example-stats {
-	color: lighten( $gray, 10% );
 	font-size: 11px;
 }
 
-.docs-example-stats__item {
-	margin: 0;
+.docs-example-stats__info {
+	display: inline-flex;
+	align-items: flex-end;
+	color: lighten( $gray, 10% );
+	user-select: none;
 }
 
-.docs-example-stats__item + .docs-example-stats__item {
-	margin-top: 1.5em;
+.docs-example-stats__count {
+	margin-left: 2px;
 }
